<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.github.venkatramanm.swf-all</groupId>
        <artifactId>swf-all</artifactId>
        <version>2.10</version>
    </parent>
    <artifactId>swf</artifactId>
    <packaging>jar</packaging>
    <name>${project.groupId}:${project.artifactId}</name>
    <description>Succinct Web Framework</description>
    <url>http://succinct.in</url>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <version>2.15-SNAPSHOT</version>

    <licenses>
        <license>
            <name>MIT</name>
            <url>LICENSE.txt</url>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git@github.com:venkatramanm/swf-all.git</connection>
        <developerConnection>scm:git:git@github.com:venkatramanm/swf-all.git</developerConnection>
        <url>https://github.com/venkatramanm/swf-all/tree/master/swf</url>
    </scm>
    <developers>
        <developer> 
          <name>Venkatraman Mahadevan</name>
          <email>venky@succinct.in</email>
          <organization>Succinct</organization>
          <organizationUrl>http://succinct.in</organizationUrl>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <openhtml.version>[1.0.10,)</openhtml.version>
        <jetty.version>11.0.14</jetty.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-server</artifactId>
            <version>${jetty.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>com.github.venkatramanm.swf-all</groupId>
            <artifactId>swf-db</artifactId>
            <version>[2.10,3.0)</version>
        </dependency>
        <dependency>
            <groupId>com.github.venkatramanm.swf-all</groupId>
            <artifactId>swf-db-io-xml</artifactId>
            <version>[2.10,3.0)</version>
        </dependency>
        <dependency>
            <groupId>com.github.venkatramanm.swf-all</groupId>
            <artifactId>swf-db-io-json</artifactId>
            <version>[2.10,3.0)</version>
        </dependency>
        <dependency>
            <groupId>com.github.venkatramanm.swf-all</groupId>
            <artifactId>swf-db-io-xls</artifactId>
            <version>[2.10,3.0)</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-core -->
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-core</artifactId>
            <version>9.9.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-analysis-common</artifactId>
            <version>9.9.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-queryparser</artifactId>
            <version>9.9.0</version>
        </dependency>
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>1.5</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.15.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.oltu.oauth2</groupId>
            <artifactId>org.apache.oltu.oauth2.client</artifactId>
            <version>1.0.2</version>
        </dependency>

        <dependency>
            <groupId>javax.activation</groupId>
            <artifactId>activation</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.openhtmltopdf</groupId>
            <artifactId>openhtmltopdf-core</artifactId>
            <version>${openhtml.version}</version>
        </dependency>

        <dependency>
            <groupId>com.openhtmltopdf</groupId>
            <artifactId>openhtmltopdf-pdfbox</artifactId>
            <version>${openhtml.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.jtidy</groupId>
            <artifactId>jtidy</artifactId>
            <version>1.0.2</version>
        </dependency>

        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.15.3</version>
        </dependency>

        
        <dependency>
            <groupId>com.vladsch.flexmark</groupId>
            <artifactId>flexmark</artifactId>
            <version>0.62.2</version>
        </dependency>
        <dependency>
            <groupId>com.vladsch.flexmark</groupId>
            <artifactId>flexmark-ext-tables</artifactId>
            <version>0.62.2</version>
        </dependency>
        <dependency>
            <groupId>com.vladsch.flexmark</groupId>
            <artifactId>flexmark-ext-attributes</artifactId>
            <version>0.62.2</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/io.cloudevents/cloudevents-core -->
        <dependency>
            <groupId>io.cloudevents</groupId>
            <artifactId>cloudevents-core</artifactId>
            <version>2.3.0</version>
        </dependency>

    </dependencies>
</project>
